logo spacing fix

--- a/style.css
+++ b/style.css
@@ -331,4 +331,9 @@ img {
     .album-text {
         font-size: 1.1em;
     }
-}
+
+    .logo-container {
+        padding-right: 1em;
+        padding-left: 1em;
+        padding-bottom: 1em;
+    }
